tests/pretty/random/random.c
struct S {
	int p;
}; struct H {struct S o; }; struct G { struct H* b; };

int main(int x){
	{
		int a;
		int b;
		int blub;
		struct G** c;
		int d;
		a = 7 * 8 * 9 * 10 + 3;
		a = 7;
		a = (a + b) * 8 * (7 * 9);
		c[9]->b->o.p = a = b ? c : d;
		sizeof(blub);{
		}
	}
	{
		{
		
		}
	}
}

int * * * (i);
int ((***g)(int********(int***(char, int))));
int ((***g)(int********(int***(void))));
void * * (b);
int a;

int i

;

int a (void);
